--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -10,8 +10,30 @@
 body{
     height: 100vh;
     width: 100vw;
-    /*max-width: 1200px;*/
 }
+section::-webkit-scrollbar{
+    width: 0.5em !important;
+    background-color: #F5F5F5 !important;
+    border-radius: 10px !important;
+
+}
+section::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3) !important;
+    background-color: #F5F5F5 !important;
+    border-radius: 10px !important;
+}
+
+section::-webkit-scrollbar-thumb {
+    border-radius: 10px !important;
+    background-image: -webkit-gradient(linear,
+    left bottom,
+    left top,
+    color-stop(0.44, rgb(122,153,217)),
+    color-stop(0.72, rgb(73,125,189)),
+    color-stop(0.86, rgb(28,58,148))) !important;
+}
+
+
 .ant-input{
     border: 0 none transparent !important;
 }
